test/expected/define_=sc_i.out
define Int of scope X of class C as int
           ^
12: error: scope can not nest inside class
